k8s/backend-seed-deployment.yaml
# k8s/backend-seed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-seed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-seed
  template:
    metadata:
      labels:
        app: backend-seed
    spec:
      containers:
        - name: backend-seed
          image: backend-seed:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
--- # Service
apiVersion: v1
kind: Service
metadata:
  name: backend-seed
spec:
  selector:
    app: backend-seed
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: ClusterIP
